# NPCEngine

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DEPLOY_TO_RENDER.md  Dockerfile  README.md  RENDER_DEPLOYMENT.md  SESSION_FIX_SUMMARY.md  SESSION_PERSISTENCE.md  build.sh  docker-compose.yml  pyproject.toml  render-separate.yaml  render.yaml  render_start.py  requirements.txt  run_server.py  start_npc_engine.py  test_npc_engine.py
.github/workflows/: security.yml
config/: actions.yaml  environment.yaml  npcs_default.yaml  player_actions.yaml  sample_actions.yaml  sample_environment.yaml  sample_npcs.yaml
examples/: package-lock.json
npc_engine/: __init__.py  cli.py
npc_engine/api/: __init__.py  npc_api.py
npc_engine/config/: __init__.py  action_config.py  config_loader.py  environment_config.py  npc_config.py  player_action_config.py
npc_engine/core/: __init__.py  action_system.py  environment_manager.py  game_session.py  npc_agent.py  session_service_factory.py
npc_engine/models/: __init__.py  action_models.py  api_models.py  environment_models.py  npc_models.py
npc_engine/utils/: __init__.py
web-gui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-gui/config/: player_actions.yaml
web-gui/src/: App.tsx  config.ts  index.css
web-gui/src/components/: ActionConfig.tsx  Dashboard.tsx  EnvironmentConfig.tsx  NPCActionConfig.tsx  NPCManager.tsx  NPCViewer.tsx  PlayerActionConfig.tsx  SessionManager.tsx
